all 5 stages done. may still need testing

--- a/app/views/movies/search_tmdb.html.erb
+++ b/app/views/movies/search_tmdb.html.erb
@@ -4,10 +4,16 @@
 
 <h2>Search in TMDb</h2>
 <%# Part 5 here %>
+<% flash.each do |key, value| %>
+  <div class="alert alert-<%= key %> alert-dismissible fade show" role="alert">
+    <%= value %>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+<% end %>
 
 <div class="search-container">
 <%# Part 1 here %>
-<%= form_tag <%# fill in here #%> do %>
+<%= form_tag search_tmdb_path, method: :post, id: 'tmdb_form' do %>
     <label for="searchMovieName">Movie Name</label>
     <%= text_field_tag 'title', nil, class: "form-control", id: "movie_title_field", placeholder: "Manhunter", id: "movie_title_field"%> 
     <label for="searchReleaseDateField">Release Year</label>
@@ -23,6 +29,43 @@
     <label class="form-check-label" for="language_all">All Languages</label>
   </div>
   <%= submit_tag 'Search', id: 'tmdb_submit', class: 'btn btn-warning col-2' %>
+
+  <%= link_to 'Back to movie list', movies_path, class: 'btn btn-secondary col-2' %>
+
   
 <% end %>
 </div>
+
+<% if @movies && @movies.any? %>
+  <h3>Search Results</h3>
+  <table class="table table-striped col-md-12" id="search_movies">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Release Date</th>
+        <th>Rating</th>
+        <th>Add to RottenPotatoes</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @movies.each do |movie| %>
+        <tr>
+          <td><%= movie[:title] %></td>
+          <td><%= movie[:release_date] %></td>
+          <td><%= movie[:vote_average] %></td>
+          <td>
+            <%= form_tag add_movie_path, method: :post do %>
+              <%= hidden_field_tag 'movie[title]', movie[:title] %>
+              <%= hidden_field_tag 'movie[rating]', movie[:rating] %>
+              <%= hidden_field_tag 'movie[release_date]', movie[:release_date] %>
+              <%= hidden_field_tag 'movie[description]', movie[:overview] %>
+              <%= submit_tag 'Add Movie', class: 'btn btn-success btn-sm' %>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% elsif params[:search_terms].present? %>
+  <p>No movies found.</p>
+<% end %>
