--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -16,8 +16,10 @@
       <%= submit_tag 'Refresh', id: 'ratings_submit', class: 'btn btn-primary' %>
     <% end %>
   </div>
-  <div class="col-md-2">
-    <%# Part 1 here %>
+  <div class="col-md-2 d-flex align-items-start">
+    <%= form_tag search_tmdb_path, method: :post do %>
+      <%= submit_tag 'Search TMDb', class: 'btn btn-primary col-12' %>
+    <% end %>
   </div>
 
 </div>
